k8s/file-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-service
  namespace: cloudnative
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-service
  template:
    metadata:
      labels:
        app: file-service
    spec:
      containers:
        - name: file-service
          image: cloudnative/file-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: file-service
  namespace: cloudnative
spec:
  selector:
    app: file-service
  ports:
    - port: 8080
      targetPort: 8080
